--- a/mlkit/app/src/main/res/values/strings.xml
+++ b/mlkit/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
   <string name="login">Login</string>
   <string name="password">Password</string>
   <string name="e_mail">Email</string>
-  <string name="tag">Let\'s make good food</string>
+  <string name="welcome">Welcome</string>
   <string name="swipe_right_for_login">Swipe Right for Login</string>
   <string name="register">Register</string>
   <string name="re_type_password">Re-type Password</string>
