--- a/mlkit/app/src/main/res/values/strings.xml
+++ b/mlkit/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
   <string name="swipe_left_for_register">Swipe Left for Register</string>
   <string name="login">Login</string>
   <string name="password">Password</string>
-  <string name="e_mail">Email</string>
+  <string name="e_mail"><font color="@color/dark_blue">Email</font></string>
   <string name="welcome">Welcome</string>
   <string name="swipe_right_for_login">Swipe Right for Login</string>
   <string name="register">Register</string>
