--- a/mlkit/app/src/main/res/values/strings.xml
+++ b/mlkit/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
 
   <!-- TODO: Remove or change this placeholder text -->
   <string name="hello_blank_fragment">Hello blank fragment</string>
-  <string name="swipe_left_for_register">Swipe Left for Register</string>
+  <string name="swipe_left_for_register">Swipe Left to Register</string>
   <string name="login">Login</string>
   <string name="password">Password</string>
   <string name="e_mail"><font color="@color/dark_blue">Email</font></string>
